kubernetes-manifests/configmaps/environment/new-demo/media-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-ingress
  annotations:
#CREATE DEDICATED IP ADDRESS -- gcloud compute addresses create $IP-NAME --global
    kubernetes.io/ingress.global-static-ip-name: "new-ms-ip"
    networking.gke.io/managed-certificates: ms-managed-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: ssl-redirect
spec:
  rules:
#Add the host for DNS rules
  - host: beta.rair.tech
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: media-service
            port:
              number: 5002
